2/2.3/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: mp
spec:
  type: ClusterIP
  selector:
    app: main-pingpong
  ports:
    - name: http 
      port: 80
      protocol: TCP
      targetPort: 3001
